# flagellar_motor_detection_project

./: Dockerfile  Makefile  README.md  entrypoint.sh  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
flagellar_motors_detection/: __init__.py  dataset.py  features.py  plots.py
flagellar_motors_detection/modeling/: predict.py  train.py
models/: __init__.py  simple3DDetector.py
notebooks/: flagellar_motor_model_detection.ipynb  flagellar_motor_model_detection.py
