[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flagellar_motors_detection"
version = "0.0.1"
description = "Personal project for trying out Machine Learning in healthcare. My attempt of Flagellar Motor detection."
authors = [
  { name = "Anvesh Mylavarapu" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["flagellar_motors_detection"]
force_sort_within_sections = true


